--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -1,7 +1,9 @@
 spring:
   application:
     name: item-service
-
+  cloud:
+    config:
+      override-none: true
 # 启动参数 --server.port 可以覆盖yml配置
 server:
   port: 8001
